# rubric-llm-judge

./: .gitignore  .gitmodules  README.mkd  convert_llmjudge.sh  flake.nix  gen-run-table.py  predict_llmjudge.sh  pyproject.toml  run-label.sh  walkthrough-llmjudge.sh  walkthrough_llmjudge.sh
inter-annotator/: llmjudge-autograde-inter-annotator-all-ExtraTrees.tex  llmjudge-autograde-inter-annotator-direct-ExtraTrees.tex  llmjudge-autograde-inter-annotator-nuggets-ExtraTrees.tex  llmjudge-autograde-inter-annotator-questions-ExtraTrees.tex
out-final/: summary
out-final/ExtraTrees/: dev.qrel  log  model
out-final/all-ExtraTrees-dev/ExtraTrees/: dev.qrel  log  model
out-final/all-ExtraTrees-test/ExtraTrees/: log
out-final/all-ExtraTrees/ExtraTrees/: dev.qrel  log  log-dev  model  (+4 more)
rubric_llm_judge/: __init__.py  change_query_id.py  label.py  llmjudge-inputs.py  llmjudge-relevance-label.py  llmjudge-rubric-four-prompts.py  llmjudge_rubric_four_prompts.py  run_commands.py
submission/: description.mkd  llm4eval_dev_qrel_2024-all-RandomForest-direct.txt  llm4eval_dev_qrel_2024-all-RandomForest-nuggets.txt  llm4eval_test_qrel_2024-all-ExtraTrees-all.txt  llm4eval_test_qrel_2024-all-ExtraTrees-nuggets.txt  llm4eval_test_qrel_2024-all-ExtraTrees-questions.txt  llm4eval_test_qrel_2024-all-RandomForest-all.txt  llm4eval_test_qrel_2024-all-RandomForest-direct.txt  llm4eval_test_qrel_2024-all-RandomForest-nuggets.txt  llm4eval_test_qrel_2024-all-RandomForest-questions.txt  llm4eval_test_qrel_2024-heuristic_predicted.txt  llm4eval_test_qrel_2024-nugget_heuristic_predicted.txt
(+48 files in other folders)
